--- a/doc/source/examples/ehydro.ipynb
+++ b/doc/source/examples/ehydro.ipynb
@@ -141,7 +141,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 7,
+      "execution_count": 8,
       "metadata": {},
       "outputs": [
         {
@@ -177,7 +177,8 @@
         "    axs[i].set_axis_off()\n",
         "\n",
         "norm = Normalize(vmin=plot_kwds[\"vmin\"], vmax=plot_kwds[\"vmax\"])\n",
-        "cbar = plt.colorbar(ScalarMappable(norm=norm, cmap=plot_kwds[\"cmap\"]), orientation='horizontal', ax=axs, pad=0.1, shrink=0.3, label=\"Depth (ft)\")"
+        "cbar = plt.colorbar(ScalarMappable(norm=norm, cmap=plot_kwds[\"cmap\"]), orientation='horizontal', ax=axs, pad=0.1, shrink=0.3, label=\"Depth (ft)\")\n",
+        "fig.savefig(\"../_static/ehydro.png\", bbox_inches=\"tight\", dpi=300)"
       ]
     },
     {
